2007-06-22  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	Tweak the metatheme icon view's margin and spacings to better fit to the
	new thumbnails.

	* theme-thumbnailing.png:
	Modernized and brought to the size of the new metatheme thumbnails.
 
2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): fix compiler warning

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: remove install buttons from individual detail pages
	and HIG-ify the "revert to defaults" label

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (file_theme_type): just check for configure
	instead of configure.in since configure.ac is valid as well; we still
	need a better way to identify engines...

2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* appearance-main.c: added the names of the pages to the help strings
	for --show-page argument.

2007-06-17  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance.glade: add --show-page option to specify the page with
	which to start

2007-06-17  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.c: (desktop_init): (wp_view_tooltip_cb):
	* gnome-wp-item.c: (gnome_wp_item_update_description):
	Added metadata tooltips to the thumbnails in the Background tab.
	Needs GTK+ 2.11 to compile (but is surrounded with GTK_CHECK_VERSION()
	for compilation with older gtk+ versions).

2007-06-17  Denis Washington  <denisw@svn.gnome.org>

	* appearance-style.c: (prepare_list):
	Change the weight of the theme titles from bold to normal in the Theme
	Details window's lists.

2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-main.c: (init_appearance_data), (main):
	* gnome-theme-installer.desktop.in.in: make gnome-theme-installer
	work

2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-style.c: (prepare_list):
	* appearance-themes.c: (theme_install_cb), (theme_delete_cb),