@@ -1,3 +1,11 @@
+2007-06-22  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
+	(icon_theme_changed), (generic_theme_delete),
+	(gtk_theme_delete_cb), (window_theme_delete_cb),
+	(icon_theme_delete_cb), (style_init), (prepare_list),
+	(check_color_schemes_enabled): hook up the delete buttons
+
 2007-06-22  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance.glade:
